Avoid wrapping legend entries.

--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ ul#legend li {
   list-style: none;
   margin: 0;
   padding: 0;
+  width: 300px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 ul#legend li {
